--- a/css/farm.css
+++ b/css/farm.css
@@ -9,6 +9,82 @@ body {
     margin-right: 0 !important;
 }
 
+h1 {
+    font-family: 'Titan One', sans-serif;
+    font-size: 56px;
+    letter-spacing: 1px;
+    color:#3A2817;
+}
+
+h2 {
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 38px;
+    letter-spacing: 1px;
+    color:#EDA23F;
+}
+    
+h3 {
+    font-family: 'Titan One', sans-serif;
+    font-size: 38px;
+    letter-spacing: 1px;
+    color:#3A2817;
+}
+
+h4 {
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 28px;
+    letter-spacing: 1px;
+}
+
+h5 {
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 22px;
+    letter-spacing: 1px;
+}
+
+h6 {
+    font-family: 'Comfortaa', sans-serif;
+    letter-spacing: 1px;
+    font-size: 18px;
+}
+
+/*subscription text header*/
+h7 {
+    font-family: 'Titan One', sans-serif;
+    font-size: 38px;
+    color:#3A2817;
+}
+
+p {
+    font-family: 'Comfortaa', sans-serif;
+    letter-spacing: 1px;
+    font-size: 14px;
+}
+
+
+/*responsive nav bar*/
+.web-nav-bar {
+    display: block;
+    visibility: visible;
+}
+
+.mobile-nav-bar {
+    display: none;
+    visibility: hidden;
+}
+
+@media only screen and (max-width: 600px) {
+    .web-nav-bar {
+        display: none;
+        visibility: hidden;
+    }
+
+    .mobile-nav-bar {
+        display: block;
+        visibility: visible;				
+    }
+}
+
 /*responsive subscription*/
 .web-subscription {
     display: block;
@@ -55,125 +131,236 @@ body {
     }
 }
 
+/*banner*/
+.banner {
+    background-color:#3A2817;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    text-align: center;
+}
+
+.nav-banner {
+    background-color: #3A2817;
+    height: 100px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    text-align: center;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.centered img {
+    width: 65%;
+    height: auto;
+}
+
+/*web nav bar*/
+.web-nav-bar {
+    background-color: #EDA23F;
+    padding: 0;
+    margin: 0;
+    width: 100%;   
+}
+
+.row-nav-bar {
+    padding: 10px 10%;
+}
+
+.nav {
+    padding: 0;
+    justify-content: space-between;
+}
+
+.nav-links {
+    display: inline-block;
+    width: fit-content;
+    font-weight: bolder;
+    text-decoration: none;
+    font-family: 'Comfortaa', sans-serif;
+    color: #3A2817;
+    font-size: 20px;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+}
+
+.nav-links:hover {
+    color: #CF5B26;
+}
+
+.drop-down {
+    position: relative;
+    display: inline-block;
+}
+
+#shop-link {
+    text-decoration: none;
+    color: #3A2817;
+}
+
+#shop-link:hover {
+    color: #CF5B26;
+}
+
+.drop-down button {
+    border: none;
+    padding: 0;
+    background: none;
+    margin-top: 5px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #EDA23F;
+    min-width: 160px;
+    border-radius: 5px;
+    padding: 12px 16px;
+    z-index: 1;
+  }
+
+.dropdown-item {
+    color: #3A2817;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    text-decoration: none;
+    width: 100%;
+}
+
+.drop-down:hover .dropdown-content {
+    display: block;
+    color: #CF5B26;
+}
+
+.nav-icon {
+    color: #3A2817;
+    font-size: 20px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.nav-icon:hover {
+    color: #CF5B26;
+}
+
+/*mobile nav bar*/
+.mobile-nav-bar {
+    background-color: #EDA23F !important;
+}
+
+.btn-primary {
+    background-color: transparent;
+    border: none;
+    padding-left: 10%;
+}
+
+.btn-primary:active {
+    background-color: #EDA23F !important;
+}
+
+.mobile-nav-bar i {
+    color: #3A2817;
+    font-size: 20px;
+}
+
+.mobile-nav-bar .btn {
+    background-color: transparent;
+    border: none;
+}
+
+.card-body {
+    background-color: #EDA23F;
+    border: none;
+    border-radius: 0;
+    padding-left: 10%;
+}
+
+.accordion-body a {
+    color: #3A2817;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+/*our farm*/
 .our-farm {
     background-color: transparent;
-    width: 100%;
+    width: fit-content;
     margin: 0;
     padding: 0;
     text-align: center;
-}
-
-.flavour-spices {
-    background-color: transparent;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
-.processes {
-    background-color: #EDA23F;
-    margin: 0;
-    padding: 0;
-    width: 100%;
+    position: relative;
     text-align: center;
 }
 
-.virtual-tour {
-    background-color: #3A2817;
-    margin: 0;
-    width: 100%;
+
+/*responsive header img*/
+.our-farm .web-img {
+    display: block;
+    visibility: visible;
 }
 
-.getting-there {
-    background-color: #3A2817;
-    margin: 0;
-    width: 100%;
-    text-align: center;
-    border-radius: 10px;
-    padding-top: 20px;
+.our-farm .mobile-img {
+    display: none;
+    visibility: hidden;
 }
 
-.subscription {
-    background-color: #EDA23F;
-    width: 100%;
-    height: 13%;
-    margin: 0;
-    padding: 0;
+.our-farm .web-img {
+    filter: brightness(45%);
+    object-fit: contain;
+    display: inline-block;
+    vertical-align: middle;
+    max-width: 100%;
+    height: auto;
 }
 
-.row-10 {
-    padding: 56px 10% 120px 10%;
-    width: 100%;
-    margin-left: 0 !important;
+.our-farm .mobile-img {
+    filter: brightness(45%);
+    object-fit: cover;
+    vertical-align: middle;
+    max-width: 100%;
+    height: 600px;
 }
 
-#farm-tour {
-    background-color: #EDA23F;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+@media only screen and (max-width: 600px) {
+    .our-farm .web-img {
+        display: none;
+        visibility: hidden;
+    }
+
+    .our-farm .mobile-img {
+        display: block;
+        visibility: visible;				
+    }
+   
 }
 
-p1 {
-    padding-top: 58px;
-    font-family: 'Titan One', sans-serif;
-    color: #3A2817;
-    font-size: 56px;
-    text-align: center;
-}
+.centered-banner-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
-h2 {
-    font-family: 'Titan One', sans-serif;
-    color: #ECE9D5;
-    font-size: 38px;   
-    text-align: center;
-}
-
-p2 {
-    font-family: 'Comfortaa', sans-serif;
-    color: #2E2012;
-    font-size: 22px;
-}
-
-p3 {
-    font-family: 'Titan One', sans-serif;
+.our-farm h1 {
     color: #EDA23F;
-    font-size: 38px;   
-    text-align: center;
+    padding-top: 10%;
 }
 
-p4 {
-    font-family: 'Comfortaa', sans-serif;
-    color: #EDA23F;
-    font-size: 12px;
-    font-weight: bolder;
-}
-
-p5 {
-    font-family: 'Titan One', sans-serif;
-    color: #3A2817;
-    font-size: 38px;
-}
-
-p6 {
-    font-family: 'Comfortaa', sans-serif;
-    color: #3A2817;
-    font-size: 18px;
-}
-
-p7 {
-    font-family: 'Titan One', sans-serif;
-    color: #C33527;
-    font-size: 38px;
-}
-
-p8 {
-    font-family: 'Comfortaa', sans-serif;
+.our-farm h6 {
     color: #ECE9D5;
-    font-size: 14px; 
+    padding-top: 3%;
 }
 
-.button {
+.sign-up a {
     background-color: #CF5B26;
     height: 48px;
     width: 179px;
@@ -182,7 +369,7 @@ p8 {
     border-radius: 10px;
     text-decoration: none;
     text-align: center;
-    padding: 12px 56px;
+    padding: 12px 24px;
     font-family: 'Comfortaa', sans-serif;
     font-weight: 600;
     font-size: 18px;
@@ -190,52 +377,97 @@ p8 {
 
 .sign-up {
     text-align: center;
-    padding-top: 24px;
-    padding-bottom: 71px;
+    padding-top: 10%;
 }
 
-.heading {
-    padding-bottom: 56px;
+/*Achieving the perfect cashews*/
+.processes {
+    background-color: #EDA23F;
+    margin: 0;
+    padding: 0;
+    width: 100%;
     text-align: center;
 }
 
-.order-form input {
+.processes .heading {
+    padding-bottom: 56px;
+}
+
+.processes .content-right {
     background-color: #ECE9D5;
-    width: 100%;
-    height: 36px;
-    text-decoration: none;
-    border-radius: 10px;
-    border: 2px solid #3A2817;
+    width: 50%;
+    float: right;
+    object-fit: cover;
+    border-radius: 5px;
 }
 
-.input-item {
-    padding-bottom: 5%;
+.processes .content-left {
+    background-color: #ECE9D5;
+    width: 50%;
+    float: left;
+    object-fit: cover;
+    border-radius: 5px;
 }
 
-label {
-    color: #3A2817;
-    font-size: 18px;
-    font-weight: bold;
-    font-family: 'Comfortaa', sans-serif;
-    padding-bottom: 2%;
+.processes .illustration {
+    margin: 0 auto;
+    z-index: 1;
 }
 
-/* img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-} */
+.processes .nuts {
+    width: 11%;
+    height: 4%;
+}
 
-img {
+.processes .nuts-banner {
     display: inline-block;
     vertical-align: middle;
     max-width: 100%;
     height: auto;
 }
 
-.nuts {
-    width: 11%;
-    height: 4%;
+.processes .content:before {
+    border-radius: 25px;
+    content: " ";
+    width: 25px;
+    height: 25px;
+    background-color: var(--color-black);
+    top: -25px;
+    left: 50%;
+    margin-left: -12.5px;
+    position: absolute;
+    z-index: 0;
+}
+
+.info h3 {
+    color: #EDA23F;
+    padding-top: 10px;
+}
+
+/*virtual farm tour*/
+.virtual-tour {
+    background-color: #3A2817;
+    margin: 0;
+    width: 100%;
+    text-align: center;
+}
+
+.virtual-tour h3 {
+    color: #EDA23F;
+    padding-bottom: 56px;
+}
+
+.row-10 {
+    padding: 56px 10% 100px 10%;
+    width: 100%;
+    margin-left: 0 !important;
+}
+
+.virtual-tour .nuts-banner {
+    display: inline-block;
+    vertical-align: middle;
+    max-width: 100%;
+    height: auto;
 }
 
 /*need to edit line margin top and height*/
@@ -263,6 +495,39 @@ img {
  .info-images {
     padding-left: 50%;
  }
+
+ /*farm form*/
+ #farm-tour {
+    background-color: #EDA23F;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#farm-tour h3 {
+    text-align: center;
+}
+
+.order-form input {
+    background-color: #ECE9D5;
+    width: 100%;
+    height: 36px;
+    text-decoration: none;
+    border-radius: 10px;
+    border: 2px solid #3A2817;
+}
+
+.input-item {
+    padding-bottom: 5%;
+}
+
+label {
+    color: #3A2817;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: 'Comfortaa', sans-serif;
+    padding-bottom: 2%;
+}
 
 textarea[name="message"] {
     height: 100%;
@@ -315,15 +580,33 @@ textarea[name="message"] {
 }
 
 .farm-button {
-    margin-top: 25px;
+    padding-top: 24px;
     text-align: right;
 }
 
-/*getting there*/
-.heading-getting-there {
-    padding-bottom: 25px;
-    padding-top: 25px;
+.farm-button a {
+    background-color: #CF5B26;
+    height: 48px;
+    width: 179px;
+    color: #ECE9D5;
+    border: none;
+    border-radius: 10px;
+    text-decoration: none;
     text-align: center;
+    padding: 12px 24px;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+/*getting there*/
+.getting-there {
+    background-color: #3A2817;
+    margin: 0;
+    width: 100%;
+    text-align: center;
+    border-radius: 10px;
+    padding-top: 20px;
 }
 
 .getting-there-row {
@@ -334,6 +617,20 @@ textarea[name="message"] {
     padding-top: 5%;
     padding-bottom: 5%;
     text-align: center;
+}
+
+.getting-there .heading h3 {
+    padding-top: 36px;
+    padding-bottom: 36px;
+    color: #EDA23F;
+}
+
+.address-contact h3 {
+    color: #ECE9D5;
+}
+
+.getting-there h6 {
+    color: #ECE9D5;
 }
 
 .google-map {
@@ -370,7 +667,7 @@ textarea[name="message"] {
     border: none;
 }
 
-button {
+.web-subscription button {
     font-family: 'Titan One', sans-serif !important;
     color: #EDA23F !important;
     font-size: 22px !important;
@@ -378,10 +675,22 @@ button {
     border: none !important;
 }
 
+.web-subscription button:hover {
+    color: #3A2817 !important;
+}
+
+.web-subscription button:hover {
+    color: #3A2817 !important;
+}
+
 .fa-brands {
     color: #EDA23F;
     font-size: 20px;
     margin-right: 8px;    
+}
+
+.fa-brands:hover {
+    color: #CF5B26;
 }
 
 .subscribe-icons {
@@ -391,6 +700,11 @@ button {
     margin-right: 8px;      
 }
 
+.subscribe-icons:hover {
+    color: #C33527;
+}
+
+
 /*mobile subscription*/
 .mobile-subscription {
     background-color: #EDA23F;
@@ -399,6 +713,14 @@ button {
     margin: 0;
     padding: 0;
     text-align: center;
+}
+
+.mobile-subscription button {
+    font-family: 'Titan One', sans-serif !important;
+    color: #EDA23F !important;
+    font-size: 22px !important;
+    background-color: #CF5B26 !important;
+    border: none !important;
 }
 
 /*web footer*/
@@ -425,6 +747,15 @@ button {
     padding-bottom: 16px;
 }
 
+.footer-link:hover {
+    color: #CF5B26;
+}
+
+.web-footer .kacaang-logo {
+    width: 100%;
+    height: auto;
+}
+
 .copyright {
     text-align: center;
     font-family: 'Comfortaa', sans-serif;
@@ -444,8 +775,12 @@ button {
     text-align: center;
 }
 
+.mobile-footer .kacaang-logo {
+    width: 50%;
+    height: auto;
+}
+
 .mobile-footer-links {
-    padding-top: 5%;
     font-family: 'Comfortaa', sans-serif;
     color: #EDA23F;
     font-size: 14px;
