--- a/css/about-us.css
+++ b/css/about-us.css
@@ -9,6 +9,64 @@ body {
     margin-right: 0 !important;
 }
 
+.row-10 {
+    padding: 56px 10% 120px 10%;
+    width: 100%;
+    margin-left: 0 !important;
+}
+
+h1 {
+    font-family: 'Titan One', sans-serif;
+    font-size: 56px;
+    letter-spacing: 1px;
+    color:#3A2817;
+}
+
+h2 {
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 38px;
+    letter-spacing: 1px;
+    color:#EDA23F;
+}
+    
+h3 {
+    font-family: 'Titan One', sans-serif;
+    font-size: 38px;
+    letter-spacing: 1px;
+    color:#3A2817;
+}
+
+h4 {
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 28px;
+    letter-spacing: 1px;
+}
+
+h5 {
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 22px;
+    letter-spacing: 1px;
+}
+
+h6 {
+    font-family: 'Comfortaa', sans-serif;
+    letter-spacing: 1px;
+    font-size: 18px;
+}
+
+/*subscription text header*/
+h7 {
+    font-family: 'Titan One', sans-serif;
+    font-size: 38px;
+    color:#3A2817;
+}
+
+p {
+    font-family: 'Comfortaa', sans-serif;
+    letter-spacing: 1px;
+    font-size: 14px;
+}
+
 /*responsive nav bar*/
 .web-nav-bar {
     display: block;
@@ -78,66 +136,9 @@ body {
     }
 }
 
-h1 {
-    padding-top: 58px;
-    font-family: 'Titan One', sans-serif;
-    color: #3A2817;
-    font-size: 56px;
-    text-align: center;
-}
-
-p2 {
-    font-family: 'Titan One', sans-serif;
-    color: #EDA23F;
-    font-size: 38px;
-}
-
-p3 {
-    font-family: 'Comfortaa', sans-serif;
-    color: #2E2012;
-    font-size: 22px;
-    text-align: center;
-}
-
-p4 {
-    font-family: 'Comfortaa', sans-serif;
-    color: #3A2817;
-    font-size: 18px;
-}
-
-p5 {
-    font-family: 'Titan One', sans-serif;
-    color: #3A2817;
-    font-size: 38px;   
-    text-align: center; 
-}
-
-p6 {
-    font-family: 'Comfortaa', sans-serif;
-    color: #EDA23F;
-    font-size: 18px;
-}
-
-/* .about-us-img {
-    background-image: url("about-banner.png");
-    height: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-} */
-/* 
-.about-us {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-} */
-
 /*banner*/
 .banner {
-    background-color: transparent;
+    background-color:#3A2817;
     height: 100%;
     width: 100%;
     position: relative;
@@ -150,6 +151,8 @@ p6 {
     width: 100%;
     margin: 0;
     padding: 0;
+    position: relative;
+    text-align: center;
 }
 
 .centered {
@@ -176,6 +179,11 @@ p6 {
     padding: 10px 10%;
 }
 
+.nav {
+    padding: 0;
+    justify-content: space-between;
+}
+
 .nav-links {
     display: inline-block;
     width: fit-content;
@@ -188,9 +196,53 @@ p6 {
     padding-bottom: 0.5%;
 }
 
-.nav {
+.nav-links:hover {
+    color: #CF5B26;
+}
+
+.drop-down {
+    position: relative;
+    display: inline-block;
+}
+
+#shop-link {
+    text-decoration: none;
+    color: #3A2817;
+}
+
+#shop-link:hover {
+    color: #CF5B26;
+}
+
+.drop-down button {
+    border: none;
     padding: 0;
-    justify-content: space-between;
+    background: none;
+    margin-top: 5px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #EDA23F;
+    min-width: 160px;
+    border-radius: 5px;
+    padding: 12px 16px;
+    z-index: 1;
+  }
+
+.dropdown-item {
+    color: #3A2817;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    text-decoration: none;
+    width: 100%;
+}
+
+.drop-down:hover .dropdown-content {
+    display: block;
+    color: #CF5B26;
 }
 
 .nav-icon {
@@ -200,42 +252,121 @@ p6 {
     vertical-align: middle;
 }
 
+.nav-icon:hover {
+    color: #CF5B26;
+}
+
+/*mobile nav bar*/
+.mobile-nav-bar {
+    background-color: #EDA23F !important;
+}
+
+.btn-primary {
+    background-color: transparent;
+    border: none;
+    padding-left: 10%;
+}
+
+.btn-primary:active {
+    background-color: #EDA23F !important;
+}
+
+.mobile-nav-bar i {
+    color: #3A2817;
+    font-size: 20px;
+}
+
+.mobile-nav-bar .btn {
+    background-color: transparent;
+    border: none;
+}
+
+.card-body {
+    background-color: #EDA23F;
+    border: none;
+    border-radius: 0;
+    padding-left: 10%;
+}
+
+.accordion-body a {
+    color: #3A2817;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: bold;
+    text-decoration: none;
+}
+
 /*about us banner*/
 .about-us {
     background-color: transparent;
-    width: 100%;
+    width: fit-content;
     margin: 0;
     padding: 0;
     text-align: center;
-}
-
-.farm {
-    background-color: #EDA23F;
-    width: 100%;
-    /* height: 13%; */
-    margin: 0;
-    padding: 0;
-    height: 62%;
+    position: relative;
     text-align: center;
 }
 
-.our-team {
-    background-color: transparent;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+/*responsive header img*/
+.about-us .web-img {
+    display: block;
+    visibility: visible;
 }
 
-.row-10 {
-    padding: 56px 10% 120px 10%;
-    width: 100%;
-    margin-left: 0 !important;
+.about-us .mobile-img {
+    display: none;
+    visibility: hidden;
 }
 
-.heading {
-    padding-bottom: 56px;
+.about-us .web-img {
+    filter: brightness(70%);
+    object-fit: fill;
+    width: 100%;
+    object-position: 70%;
+    height: auto;
+}
+
+.about-us .mobile-img {
+    filter: brightness(70%);
+    object-fit: cover;
+    vertical-align: middle;
+    max-width: 100%;
+    height: 700px;
+}
+
+@media only screen and (max-width: 600px) {
+    .about-us .web-img {
+        display: none;
+        visibility: hidden;
+    }
+
+    .about-us .mobile-img {
+        display: block;
+        visibility: visible;				
+    }
+   
+}
+
+.centered-banner-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.about-us h1 {
+    padding-bottom: 20px;
     text-align: center;
+    color: #EDA23F;
+}
+
+.about-us h4 {
+    color: #EDA23F;
+    font-weight: bold;
+}
+
+.centered-banner-text h6 {
+    color: #ECE9D5;
+    font-weight: bold;
 }
 
 .button {
@@ -254,21 +385,43 @@ p6 {
     margin: 0 25px 0 25px;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
-}
-
 /*values*/
 .values {
+    padding: 30px 10%;
+}
+
+.values img {
+    width: 45px;
+    height: auto;
+    padding-bottom: 11px;
+}
+
+.values .row{
     justify-content: space-between;
     text-align: center;
 }
 
+.values h6 {
+    color: #3A2817;
+}
+
 /*mission and vision*/
-.row-mission-vision {
-    padding: 20px 10%;
+.mission {
+    padding: 40px 10%;
     text-align: center;
+}
+
+.mission h3 {
+    color: #EDA23F;
+}
+
+.mission h6 {
+    color: #EDA23F;
+}
+
+.vision {
+    padding: 40px 10%;
+    text-align: center; 
 }
 
 .icon {
@@ -307,9 +460,34 @@ img {
 }
 
 /*our team*/
-.farm-button {
-    padding-top: 50px;
+.our-team {
+    background-color: transparent;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     text-align: center;
+}
+
+.our-team .heading {
+    padding-bottom: 56px;
+}
+
+.our-team img {
+    padding-bottom: 16px;
+    max-width: 100%;
+    height: auto;
+}
+
+.our-team h3 {
+    color: #EDA23F;
+}
+
+.our-team h5 {
+    color: #3A2817;
+}
+
+.our-team h6 {
+    color: #3A2817;
 }
 
 /*web subcription*/
@@ -327,6 +505,10 @@ img {
     margin-left: 0 !important;
 }
 
+.web-subscription h3 {
+    letter-spacing: normal;
+}
+
 input[type=text] {
     background-color: #CF5B26;
     color: white;
@@ -334,12 +516,16 @@ input[type=text] {
     border: none;
 }
 
-button {
+.web-subscription button {
     font-family: 'Titan One', sans-serif !important;
     color: #EDA23F !important;
     font-size: 22px !important;
     background-color: #CF5B26 !important;
     border: none !important;
+}
+
+.web-subscription button:hover {
+    color: #3A2817 !important;
 }
 
 .fa-brands {
@@ -348,11 +534,19 @@ button {
     margin-right: 8px;    
 }
 
+.fa-brands:hover {
+    color: #CF5B26;
+}
+
 .subscribe-icons {
     color: #CF5B26;
     font-size: 50px;
     margin-top: 15px;
     margin-right: 8px;      
+}
+
+.subscribe-icons:hover {
+    color: #C33527;
 }
 
 /*mobile subscription*/
@@ -363,6 +557,14 @@ button {
     margin: 0;
     padding: 0;
     text-align: center;
+}
+
+.mobile-subscription button {
+    font-family: 'Titan One', sans-serif !important;
+    color: #EDA23F !important;
+    font-size: 22px !important;
+    background-color: #CF5B26 !important;
+    border: none !important;
 }
 
 /*web footer*/
@@ -386,7 +588,15 @@ button {
     font-size: 18px;
     font-weight: bold;
     text-decoration: none;
-    padding-bottom: 16px;
+}
+
+.footer-link:hover {
+    color: #CF5B26;
+}
+
+.web-footer .kacaang-logo {
+    width: 100%;
+    height: auto;
 }
 
 .copyright {
@@ -408,8 +618,12 @@ button {
     text-align: center;
 }
 
+.mobile-footer img {
+    width: 50%;
+    height: auto;
+}
+
 .mobile-footer-links {
-    padding-top: 5%;
     font-family: 'Comfortaa', sans-serif;
     color: #EDA23F;
     font-size: 14px;
