--- a/css/corporate.css
+++ b/css/corporate.css
@@ -10,6 +10,29 @@ body {
     margin-right: 0 !important;
 }
 
+/*responsive nav bar*/
+.web-nav-bar {
+    display: block;
+    visibility: visible;
+}
+
+.mobile-nav-bar {
+    display: none;
+    visibility: hidden;
+}
+
+@media only screen and (max-width: 600px) {
+    .web-nav-bar {
+        display: none;
+        visibility: hidden;
+    }
+
+    .mobile-nav-bar {
+        display: block;
+        visibility: visible;				
+    }
+}
+
 /*responsive subscription*/
 .web-subscription {
     display: block;
@@ -54,6 +77,165 @@ body {
         display: block;
         visibility: visible;				
     }
+}
+
+/*banner*/
+.banner {
+    background-color:#3A2817;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    text-align: center;
+}
+
+.nav-banner {
+    background-color: #3A2817;
+    height: 100px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    text-align: center;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.centered img {
+    width: 65%;
+    height: auto;
+}
+
+/*web nav bar*/
+.web-nav-bar {
+    background-color: #EDA23F;
+    padding: 0;
+    margin: 0;
+    width: 100%;   
+}
+
+.row-nav-bar {
+    padding: 10px 10%;
+}
+
+.nav {
+    padding: 0;
+    justify-content: space-between;
+}
+
+.nav-links {
+    display: inline-block;
+    width: fit-content;
+    font-weight: bolder;
+    text-decoration: none;
+    font-family: 'Comfortaa', sans-serif;
+    color: #3A2817;
+    font-size: 20px;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+}
+
+.nav-links:hover {
+    color: #CF5B26;
+}
+
+.drop-down {
+    position: relative;
+    display: inline-block;
+}
+
+#shop-link {
+    text-decoration: none;
+    color: #3A2817;
+}
+
+#shop-link:hover {
+    color: #CF5B26;
+}
+
+.drop-down button {
+    border: none;
+    padding: 0;
+    background: none;
+    margin-top: 5px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #EDA23F;
+    min-width: 160px;
+    border-radius: 5px;
+    padding: 12px 16px;
+    z-index: 1;
+  }
+
+.dropdown-item {
+    color: #3A2817;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    text-decoration: none;
+    width: 100%;
+}
+
+.drop-down:hover .dropdown-content {
+    display: block;
+    color: #CF5B26;
+}
+
+.nav-icon {
+    color: #3A2817;
+    font-size: 20px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.nav-icon:hover {
+    color: #CF5B26;
+}
+
+/*mobile nav bar*/
+.mobile-nav-bar {
+    background-color: #EDA23F !important;
+}
+
+.btn-primary {
+    background-color: transparent;
+    border: none;
+    padding-left: 10%;
+}
+
+.btn-primary:active {
+    background-color: #EDA23F !important;
+}
+
+.mobile-nav-bar i {
+    color: #3A2817;
+    font-size: 20px;
+}
+
+.mobile-nav-bar .btn {
+    background-color: transparent;
+    border: none;
+}
+
+.card-body {
+    background-color: #EDA23F;
+    border: none;
+    border-radius: 0;
+    padding-left: 10%;
+}
+
+.accordion-body a {
+    color: #3A2817;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 .heading {
@@ -269,8 +451,12 @@ label {
     text-align: center;
 }
 
+.Kacaang-logo {
+    width: 50%;
+    height: auto;
+}
+
 .mobile-footer-links {
-    padding-top: 5%;
     font-family: 'Comfortaa', sans-serif;
     color: #EDA23F;
     font-size: 14px;
