--- a/css/shop.css
+++ b/css/shop.css
@@ -36,6 +36,7 @@ h1 {
     font-family: 'Comfortaa', sans-serif;
     font-size: 28px;
     letter-spacing: 1px;
+    color:#3A2817;
     }
   
   h5 {
@@ -62,6 +63,191 @@ h1 {
   padding: 56px 20% 120px;
 }
 
+/*responsive nav bar*/
+.web-nav-bar {
+  display: block;
+  visibility: visible;
+}
+
+.mobile-nav-bar {
+  display: none;
+  visibility: hidden;
+}
+
+@media only screen and (max-width: 600px) {
+  .web-nav-bar {
+      display: none;
+      visibility: hidden;
+  }
+
+  .mobile-nav-bar {
+      display: block;
+      visibility: visible;        
+  }
+}
+
+/*banner*/
+.banner {
+  background-color:#3A2817;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  text-align: center;
+}
+
+.nav-banner {
+  background-color: #3A2817;
+  height: 100px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  text-align: center;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.centered img {
+  width: 65%;
+  height: auto;
+}
+
+/*web nav bar*/
+.web-nav-bar {
+  background-color: #EDA23F;
+  padding: 0;
+  margin: 0;
+  width: 100%;   
+}
+
+.row-nav-bar {
+  padding: 10px 10%;
+}
+
+.nav {
+  padding: 0;
+  justify-content: space-between;
+}
+
+.nav-links {
+  display: inline-block;
+  width: fit-content;
+  font-weight: bolder;
+  text-decoration: none;
+  font-family: 'Comfortaa', sans-serif;
+  color: #3A2817;
+  font-size: 20px;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
+}
+
+.nav-links:hover {
+  color: #CF5B26;
+}
+
+.drop-down {
+  position: relative;
+  display: inline-block;
+}
+
+#shop-link {
+  text-decoration: none;
+  color: #3A2817;
+}
+
+#shop-link:hover {
+  color: #CF5B26;
+}
+
+.drop-down button {
+  border: none;
+  padding: 0;
+  background: none;
+  margin-top: 5px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #EDA23F;
+  min-width: 160px;
+  border-radius: 5px;
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown-item {
+  color: #3A2817;
+  font-family: 'Comfortaa', sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+  text-decoration: none;
+  width: 100%;
+}
+
+.drop-down:hover .dropdown-content {
+  display: block;
+  color: #CF5B26;
+}
+
+.nav-icon {
+  color: #3A2817;
+  font-size: 20px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.nav-icon:hover {
+  color: #CF5B26;
+}
+
+/*mobile nav bar*/
+.mobile-nav-bar {
+  background-color: #EDA23F !important;
+}
+
+.btn-primary {
+  background-color: transparent;
+  border: none;
+  padding-left: 10%;
+}
+
+.btn-primary:active {
+  background-color: #EDA23F !important;
+}
+
+.mobile-nav-bar i {
+  color: #3A2817;
+  font-size: 20px;
+}
+
+.mobile-nav-bar .btn {
+  background-color: transparent;
+  border: none;
+}
+
+.card-body {
+  background-color: #EDA23F;
+  border: none;
+  border-radius: 0;
+  padding-left: 10%;
+}
+
+.accordion-body a {
+  color: #3A2817;
+  font-family: 'Comfortaa', sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+
+
+
 /*web footer*/
 .web-footer {
   background-color: #3A2817;
@@ -85,10 +271,14 @@ h1 {
   text-decoration: none;
   padding-bottom: 16px;
 }
-.fa-brands {
-  color: #EDA23F;
-  font-size: 20px;
-  margin-right: 8px;    
+
+.footer-link:hover {
+  color: #CF5B26;
+}
+
+.web-footer .kacaang-logo {
+  width: 100%;
+  height: auto;
 }
 
 .copyright {
@@ -110,8 +300,12 @@ h1 {
   text-align: center;
 }
 
+.mobile-footer .kacaang-logo {
+  width: 50%;
+  height: auto;
+}
+
 .mobile-footer-links {
-  padding-top: 5%;
   font-family: 'Comfortaa', sans-serif;
   color: #EDA23F;
   font-size: 14px;
@@ -122,20 +316,20 @@ h1 {
 .privacy-tandc {
   padding-top: 10%;
 }
+.fa-brands {
+  color: #EDA23F;
+  font-size: 20px;
+  margin-right: 8px;    
+}
+
+.fa-brands:hover {
+  color: #CF5B26;
+}
 
 /*responsive footer*/
 .web-footer {
   display: block;
   visibility: visible;
-}
-.web-footer img {
-  max-width: 100%;
-  height: auto;
-}
-
-.Kacaang-logo {
-  width: 50%;
-  height: auto;
 }
 
 .mobile-footer {
@@ -143,7 +337,7 @@ h1 {
   visibility: hidden;
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 600px) {
   .web-footer {
       display: none;
       visibility: hidden;
@@ -246,7 +440,7 @@ h1 {
     padding-right: 20px;
 }
 .shop-review-line {
-    padding-bottom: 10px;
+    padding-bottom: 30px;
 }
 
 /* @supports (display: flex) {
@@ -277,10 +471,6 @@ h1 {
   transform: translate(-50%, -50%);
 }
 
-/* .product-info {
-  
-  min-height: 700px;
-} */
 .product-info-content {
   display: grid;
   /* grid-template-columns: 35% 10% 55%; */
@@ -311,7 +501,7 @@ h1 {
   padding-bottom: 20px;
 }
 .product-size-padding {
-  padding-right: 20%;
+  /* padding-right: 20%; */
 }
 @media only screen and (max-width:720px) {
   .product-size-padding {
@@ -332,18 +522,25 @@ h1 {
   padding: 5px 0;
 }
 
-.product-size-contents, .prod-cart-contents {
+.prod-cart-contents {
   text-align: center;
+  margin-top: 8px;
 }
 .orange-text {
   color: #CF5B26;
+}
+.product-size-weight-text {
+  font-size: 18px;
+}
+.price-text {
+  padding-left: 36%;
 }
 .prod-size {
   padding-top: 10px;
 }
 .product-add-cart-padding {
-  padding-right: 20%;
-  margin-top: 50px;
+  /* padding-right: 20%; */
+  margin-top: 30px;
 }
 @media only screen and (max-width:720px) {
   .product-add-cart-padding  {
@@ -373,6 +570,10 @@ h1 {
   padding: 3px 10px;
   font-size: 18px;
 }
+.prod-add-cart-button button:hover {
+  background-color: #C33527;
+
+}
 .product-size-contents button:hover {
   background-color: #CF5B26;
   color:#ECE9D5;
@@ -393,14 +594,14 @@ h1 {
   text-align: center;
 }
 .suggested-scroll h3{
-  padding-bottom: 56px;
+  padding-bottom: 8px;
 }
 
 .flavours {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
-  gap: 5rem;
+  gap: 4rem;
   text-align: center;
   .col {
     flex: 0 0 auto;
@@ -420,8 +621,8 @@ h1 {
   text-align: center;
 }
 
-.col-md-2 img {
-  width: 85%;
+.col-md-3 img {
+  width: 100%;
   padding-bottom: 30px;
 }
 
@@ -438,16 +639,18 @@ h1 {
 
 /* reviews page */
 .reviews-banner {
-  /* height: 450px; */
-  background-color: #B0824D;
-  text-align: center;
-  width:100%;
+  width: 100%;
 }
 .reviews-banner img {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+/* .reviews-banner img {
   width: 60%;
   padding-top: 56px;
   padding-bottom: 120px;
-}
+} */
 .reviews-tab {
   display: flex;
   justify-content: space-between;
@@ -537,19 +740,27 @@ h1 {
 .find-us-popups {
   text-align: center;
 }
+@media only screen and (max-width:720px) {
+  .find-us-popups {
+    padding-bottom: 56px;
+  }
+  }
+
 .popup-tag-div {
   display: flex;
   justify-content: center;
-  /* position: absolute; */
+  padding: 10px 0 0;
+
 }
 .popup-tag {
   background-color:#CF5B26;
-  width: 55%;
+  width: 35%;
   border-radius: 8px;
-  /* padding-left: 40px; */
-  z-index: 5;
 }
-.popup-tag h5{
+.popup-coming-soon-tag {
+  width: 50%;
+}
+.popup-tag p{
   font-family: 'Titan One', sans-serif;
   color: #ECE9D5;
   padding: 3px 0;
@@ -581,8 +792,62 @@ h1 {
 .find-us-popups-date h6 {
   padding-left: 3%;
 }
+.find-us-retailers {
+  text-align: center;
+  background-color: #EDA23F;
+}
+.find-us-retailers h1 {
+  padding-bottom: 56px;
+}
+.find-us-online-stores {
+  padding-bottom: 100px;
+}
+.find-us-online-stores a{
+  /* text-decoration: none; */
+  color: #3A2817;
+}
+.find-us-online-stores h3{
+  padding: 18px 0;
+}
 
+/* getting there */
+.orange-bg {
+  background-color: #CF5B26;
+  border-radius: 12px;
+}
+.find-us-loc-text-title {
+  padding: 22px 0;
+  text-align: center;
+}
+.find-us-loc-text-title h3 {
+  color: #ECE9D5;
+}
 
+/* .getting-there-row {
+  margin-left: 0 !important;
+} */
+
+.find-us-loc-text {
+  padding-top: 5%;
+  padding-bottom: 5%;
+  text-align: center;
+}
+
+.google-map-warehouse {
+  
+  padding-bottom: 50%;
+  position: relative;
+  text-align: center;
+}
+
+.google-map-warehouse iframe {
+  width: 95%;
+  height: 95%;
+  padding-top: 6%;
+  left: 0;
+  top: 0;
+  position: absolute;
+}
 
 
 
