--- a/css/yuwen.css
+++ b/css/yuwen.css
@@ -107,13 +107,13 @@ p {
 .shop-product h5 {
     padding-top: 15px;
     color: #ECE9D5;
-  
+
 }
 
 .shop-product h6 {
     padding-bottom: 5px;
     color: #ECE9D5;
-  
+
 }
 
 .shop-review-line img {
@@ -152,6 +152,12 @@ p {
     color: #EDA23F;
 }
 
+.differentbg-brown img,
+.differentbg-orange img {
+    max-width: 100%;
+    height: auto;
+}
+
 .differentbg-brown h3 {
     color: #EDA23F;
     padding-bottom: 36px;
@@ -163,22 +169,24 @@ p {
 
 .videowrapper {
     position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
+    padding-bottom: 56.25%;
+    /* 16:9 */
     height: 0;
-  }
-  .videowrapper iframe {
+}
+
+.videowrapper iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-  }
+}
 
 /*end index*/
 
 /*carousel*/
 .suggested-scroll {
-    text-align: center; 
+    text-align: center;
     overflow-x: auto;
 }
 
@@ -195,8 +203,6 @@ p {
 
     .col {
         flex: 0 0 auto;
-        max-width: 100%; /* Ensure child elements don't exceed container width */
-        word-wrap: break-word;
     }
 }
 
@@ -214,11 +220,6 @@ p {
 .element {
     overflow: -moz-scrollbars-none;
 }
-
-/* .col-md-4 img {
-    height: 360px;
-    width: auto;
-  } */
 
 @media only screen and (max-width:720px) {
     .flavours {
@@ -633,7 +634,8 @@ textarea {
     }
 
     .shop-product h6 {
-        font-size: 14px;;
+        font-size: 14px;
+        ;
     }
 
     .shop-review-line img {
@@ -672,7 +674,7 @@ textarea {
         display: none;
         visibility: hidden;
     }
-    
+
     .mobile-stars {
         display: block;
         visibility: visible;
@@ -761,6 +763,7 @@ textarea {
 
 /*end subscriptions*/
 
+
 /*footer*/
 /*responsive footer*/
 .web-footer {
@@ -791,15 +794,15 @@ textarea {
     width: 100%;
     margin: 0;
     padding: 0;
-}
-
-.row-footer {
+  }
+  
+  .row-footer {
     padding: 50px 10% 10px 10%;
     width: 100%;
     margin-left: 0 !important;
-}
-
-.footer-link {
+  }
+  
+  .footer-link {
     font-family: 'Comfortaa', sans-serif;
     line-height: 1.5;
     color: #EDA23F;
@@ -807,9 +810,18 @@ textarea {
     font-weight: bold;
     text-decoration: none;
     padding-bottom: 16px;
-}
-
-.copyright {
+  }
+  
+  .footer-link:hover {
+    color: #CF5B26;
+  }
+  
+  .web-footer .kacaang-logo {
+    width: 100%;
+    height: auto;
+  }
+  
+  .copyright {
     text-align: center;
     font-family: 'Comfortaa', sans-serif;
     color: #EDA23F;
@@ -817,39 +829,246 @@ textarea {
     font-weight: bold;
     text-decoration: none;
     margin-top: 5%;
-}
-
-/*mobile footer*/
-.mobile-footer {
+  }
+  
+  /*mobile footer*/
+  .mobile-footer {
     background-color: #3A2817;
     width: 100%;
     margin: 0;
     padding: 0;
     text-align: center;
-}
-
-.mobile-footer-links {
-    padding-top: 5%;
+  }
+  
+  .mobile-footer .kacaang-logo {
+    width: 50%;
+    height: auto;
+  }
+  
+  .mobile-footer-links {
     font-family: 'Comfortaa', sans-serif;
     color: #EDA23F;
     font-size: 14px;
     font-weight: bold;
     text-decoration: none;
-}
-
-.privacy-tandc {
+  }
+  
+  .privacy-tandc {
     padding-top: 10%;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-.fa-brands {
+  }
+  .fa-brands {
     color: #EDA23F;
     font-size: 20px;
-    margin-right: 8px;
-}
+    margin-right: 8px;    
+  }
+  
+  .fa-brands:hover {
+    color: #CF5B26;
+  }
+  
+  /*responsive footer*/
+  .web-footer {
+    display: block;
+    visibility: visible;
+  }
+  
+  .mobile-footer {
+    display: none;
+    visibility: hidden;
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .web-footer {
+        display: none;
+        visibility: hidden;
+    }
+  
+    .mobile-footer {
+        display: block;
+        visibility: visible;        
+    }
+  }
 
 /*end footer*/
+
+/*responsive nav bar*/
+.web-nav-bar {
+    display: block;
+    visibility: visible;
+  }
+  
+  .mobile-nav-bar {
+    display: none;
+    visibility: hidden;
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .web-nav-bar {
+        display: none;
+        visibility: hidden;
+    }
+  
+    .mobile-nav-bar {
+        display: block;
+        visibility: visible;        
+    }
+  }
+  
+  /*banner*/
+  .banner {
+    background-color:#3A2817;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    text-align: center;
+  }
+  
+  .nav-banner {
+    background-color: #3A2817;
+    height: 100px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    text-align: center;
+  }
+  
+  .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .centered img {
+    width: 65%;
+    height: auto;
+  }
+  
+  /*web nav bar*/
+  .web-nav-bar {
+    background-color: #EDA23F;
+    padding: 0;
+    margin: 0;
+    width: 100%;   
+  }
+  
+  .row-nav-bar {
+    padding: 10px 10%;
+  }
+  
+  .nav {
+    padding: 0;
+    justify-content: space-between;
+  }
+  
+  .nav-links {
+    display: inline-block;
+    width: fit-content;
+    font-weight: bolder;
+    text-decoration: none;
+    font-family: 'Comfortaa', sans-serif;
+    color: #3A2817;
+    font-size: 20px;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+  }
+  
+  .nav-links:hover {
+    color: #CF5B26;
+  }
+  
+  .drop-down {
+    position: relative;
+    display: inline-block;
+  }
+  
+  #shop-link {
+    text-decoration: none;
+    color: #3A2817;
+  }
+  
+  #shop-link:hover {
+    color: #CF5B26;
+  }
+  
+  .drop-down button {
+    border: none;
+    padding: 0;
+    background: none;
+    margin-top: 5px;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #EDA23F;
+    min-width: 160px;
+    border-radius: 5px;
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown-item {
+    color: #3A2817;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    text-decoration: none;
+    width: 100%;
+  }
+  
+  .drop-down:hover .dropdown-content {
+    display: block;
+    color: #CF5B26;
+  }
+  
+  .nav-icon {
+    color: #3A2817;
+    font-size: 20px;
+    text-align: center;
+    vertical-align: middle;
+  }
+  
+  .nav-icon:hover {
+    color: #CF5B26;
+  }
+  
+  /*mobile nav bar*/
+  .mobile-nav-bar {
+    background-color: #EDA23F !important;
+  }
+  
+  .btn-primary {
+    background-color: transparent;
+    border: none;
+    padding-left: 10%;
+  }
+  
+  .btn-primary:active {
+    background-color: #EDA23F !important;
+  }
+  
+  .mobile-nav-bar i {
+    color: #3A2817;
+    font-size: 20px;
+  }
+  
+  .mobile-nav-bar .btn {
+    background-color: transparent;
+    border: none;
+  }
+  
+  .card-body {
+    background-color: #EDA23F;
+    border: none;
+    border-radius: 0;
+    padding-left: 10%;
+  }
+  
+  .accordion-body a {
+    color: #3A2817;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: bold;
+    text-decoration: none;
+  }
