--- a/css/farm.css
+++ b/css/farm.css
@@ -380,68 +380,234 @@ p {
     padding-top: 10%;
 }
 
-/*Achieving the perfect cashews*/
-.processes {
-    background-color: #EDA23F;
-    margin: 0;
-    padding: 0;
+/*responsive processes - Achieving the perfect cashews*/
+.web-processes {
+    display: block;
+    visibility: visible;
+}
+
+.mobile-processes {
+    display: none;
+    visibility: hidden;
+}
+
+@media only screen and (max-width: 600px) {
+    .web-processes {
+        display: none;
+        visibility: hidden;
+    }
+
+    .mobile-processes {
+        display: block;
+        visibility: visible;				
+    }
+}
+
+/*website Achieving the perfect cashews*/
+.web-processes {
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-size: cover;
     width: 100%;
+    text-align: center;
+    background-color: #EDA23F;
+  }
+  
+  .web-processes h1 {
+    margin-top: 50px;
+  }
+  
+  /* The actual timeline (the vertical ruler) */
+  .web-processes .timeline {
+    position: relative;
+    padding-left: 250px;
+    padding-right: 250px;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 40px;
+  }
+  
+  /* The actual timeline (the vertical ruler) */
+  .web-processes .timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: #3A2817;
+    top: 0;
+    bottom: 5%;
+    left: 50%;
+    margin-left: -3px;
+  }
+  
+  /* Container around content */
+  .web-processes .container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+  }
+  
+  /* The circles on the timeline */
+  .web-processes .container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -6.45%;
+    background-color: #3A2817;
+    border: 4px solid #3A2817;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+  }
+  
+  /* Place the container to the left */
+  .web-processes .left {
+    left: 0;
+  }
+  
+  /* Place the container to the right */
+  .web-processes .right {
+    left: 50%;
+  }
+  
+  /* Add arrows to the left container (pointing right) */
+  .web-processes .left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid #ECE9D5;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent #ECE9D5;
+  }
+  
+  /* Add arrows to the right container (pointing left) */
+  .web-processes .right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid #ECE9D5;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent #ECE9D5 transparent transparent;
+  }
+  
+  /* Fix the circle for containers on the right side */
+  .web-processes .right::after {
+    left: 0;
+  }
+  
+  /* The actual content */
+  .web-processes .tl-content {
+    padding: 20px 30px;
+    background-color: #ECE9D5;
+    position: relative;
+    border-radius: 5px;
+    object-fit: cover;
+  }
+
+  .web-processes .tl-content h3 {
+    color: #EDA23F;
+    padding-bottom: 5px;
+  }
+  .web-processes .tl-content h6 {
+    color: #3A2817;
+  }
+  
+  .web-processes .tl-content img {
+    width: 100%;
+    height: auto;
+    padding-bottom: 20px;
+  }
+  
+  .web-processes .heading {
+    padding-top: 56px;
+    padding-bottom: 56px;
     text-align: center;
 }
 
-.processes .heading {
-    padding-bottom: 56px;
-}
-
-.processes .content-right {
-    background-color: #ECE9D5;
-    width: 50%;
-    float: right;
-    object-fit: cover;
-    border-radius: 5px;
-}
-
-.processes .content-left {
-    background-color: #ECE9D5;
-    width: 50%;
-    float: left;
-    object-fit: cover;
-    border-radius: 5px;
-}
-
-.processes .illustration {
-    margin: 0 auto;
-    z-index: 1;
-}
-
-.processes .nuts {
-    width: 11%;
-    height: 4%;
-}
-
-.processes .nuts-banner {
+.web-processes .nuts-banner {
     display: inline-block;
     vertical-align: middle;
     max-width: 100%;
     height: auto;
 }
 
-.processes .content:before {
-    border-radius: 25px;
-    content: " ";
-    width: 25px;
-    height: 25px;
-    background-color: var(--color-black);
-    top: -25px;
-    left: 50%;
-    margin-left: -12.5px;
-    position: absolute;
-    z-index: 0;
+/*mobile Achieving the perfect cashews*/
+.mobile-processes {
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-size: cover;
+    width: 100%;
+    text-align: center;
+    background-color: #EDA23F; 
+}
+  
+.mobile-processes h1 {
+    margin-top: 50px;
+  }
+  
+  /* The actual timeline (the vertical ruler) */
+.mobile-processes .line {
+    border-left: 6px solid green;
+    height: 500px;
+    z-index: 2;
 }
 
-.info h3 {
+  .mobile-processes .timeline {
+    position: relative;
+    z-index: 1;
+  }
+  
+  /* Container around content */
+  .mobile-processes .container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 100%;
+  }
+  
+  /* The actual content */
+  .mobile-processes .tl-content {
+    padding: 20px 30px;
+    background-color: #ECE9D5;
+    position: relative;
+    border-radius: 5px;
+    object-fit: cover;
+  }
+
+  .mobile-processes .tl-content h3 {
     color: #EDA23F;
-    padding-top: 10px;
+    padding-bottom: 5px;
+  }
+  .mobile-processes .tl-content h6 {
+    color: #3A2817;
+  }
+  
+  .mobile-processes .tl-content img {
+    width: 100%;
+    height: auto;
+    padding-bottom: 20px;
+  }
+  
+  .mobile-processes .heading {
+    padding-top: 56px;
+    padding-bottom: 56px;
+    text-align: center;
+}
+
+.mobile-processes .nuts-banner {
+    display: inline-block;
+    vertical-align: middle;
+    max-width: 100%;
+    height: auto;
 }
 
 /*virtual farm tour*/
